Fixing the z-index of the carousel indicators

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,11 +60,11 @@ ul, ol {
 }
 
 .big-background-title {
-    font-style: italic;
+    /*font-style: italic;*/
     font-size:78px;
     color:#fff;
     font-weight:300;
-    /*text-transform:uppercase;*/
+    text-transform:uppercase;
     text-align:center;
     margin-bottom:22px;
     padding-top:20px;
@@ -229,6 +229,18 @@ a.about-section-btn {
     background-image: none
 }
 
+.carousel-indicators {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    z-index: 1;
+    width: 60%;
+    margin-left: -30%;
+    padding-left: 0;
+    list-style: none;
+    text-align: center;
+}
+
 
 
 
@@ -289,6 +301,7 @@ a.about-section-btn {
   width: 100%;
   height: 30px;
   background: rgba(255,255,255,1);
+  z-index: 2;
 }
 
 /* Music player */
